--- a/sandbox/lines/app.css
+++ b/sandbox/lines/app.css
@@ -30,6 +30,7 @@ body {
   padding: 0;
 }
 #ui {
+  background: #000;
   padding: 10px;
   position: absolute;
   bottom: 0;
@@ -38,13 +39,18 @@ body {
 #ui:hover li {
   opacity: 0.8;
 }
+
 #ui li {
   display: inline-block;
-  color: #000;
-  opacity: 0.3;
+  color: #fff;
+  opacity: 0.8;
   padding: 0 5px;
   border-right: 1px dotted #999;
-  font-size: 0.8em;
+  font-size: 1.2rem;
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   transition: opacity 0.2s linear;
+}
+
+#ui > li:first-child {
+  color: pink;
 }
